# Twitter-App-Clone

./: .gitignore  README.md  docs.md  pyproject.toml  requirements.txt  schema.yml
apis/v1/: urls.py
apps/accounts/: managers.py  models.py  serializers.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: factories.py  test_managers.py  test_models.py
apps/auth/: serializers.py  views.py
apps/auth/tests/: test_views.py
apps/friends/: models.py  serializers.py  views.py
apps/friends/migrations/: 0001_initial.py
apps/friends/tests/: factories.py  test_models.py
apps/posts/: models.py  serializers.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_comment_image_like_delete_postimages_and_more.py  0003_remove_like_post_remove_like_user_alter_comment_post_and_more.py  0004_rename_images_post_image.py  0005_like.py
apps/posts/serializers/: comments.py  likes.py  posts.py
apps/posts/tests/: factories.py  test_models.py  test_views.py
apps/profiles/: models.py  serializers.py  views.py
apps/profiles/migrations/: 0001_initial.py
apps/profiles/tests/: test_models.py  test_signals.py  test_views.py
apps/utils/: models.py  permissions.py  viewsets.py
core/: settings.py  urls.py
staticfiles/: staticfiles.json
